<resources>
    <string name="app_name">PopularLibs</string>
    <string name="counter_one">счетчик 1</string>
    <string name="counter_two">счетчик 2</string>
    <string name="counter_three">счетчик 3</string>
    <string name="start_count">0</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="accept">Войти</string>
    <string name="success">Success Authorization!!!</string>
    <string name="error_login">Некорректно введены авторизационные данные!</string>
    <string name="exponentiation_title">Введи число, которое мы возведем в квадрат</string>
    <string name="ok">OK</string>
    <string name="success_exponentiation">Результат операции - %s</string>
    <string name="text_login">login</string>
    <string name="text_name">name</string>
    <string name="text_location">location</string>
    <string name="text_full_name">full name</string>
    <string name="text_description">description</string>
</resources>